Update the boostrap cdn link to 4.5.0
aWebHostBuilder.UseStaticWebAssets();
This will allow referencing css js etc from included dll content

https://docs.microsoft.com/en-us/aspnet/core/razor-pages/ui-class?view=aspnetcore-3.1&tabs=visual-studio#consume-content-from-a-referenced-rcl

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
   </environment>
   <environment exclude="Development">
+    <link 
+      rel="stylesheet" 
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           asp-fallback-href="css/bootstrap/bootstrap.min.css"
           asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
