--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
@@ -18,7 +18,7 @@
       <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
     </NavLink>
   </li>
-  <li class="nav-item px-3">
+  <li class="nav-item">
     <NavLink class="nav-link" href="/swagger/">
       <span class="oi oi-external-link" aria-hidden="true"></span> Api Docs
     </NavLink>
