--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/_Imports.razor
@@ -1,2 +1,6 @@
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Routing
 @using System.Net.Http.Json
+@using TimeWarp.Blazor.Features.Bases
+@using TimeWarp.Blazor.Components
+@using TimeWarp.Blazor.Pages
