--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
@@ -17,7 +17,7 @@
     </NavLink>
   </li>
   <li class="nav-item">
-    <NavLink class="nav-link" href="/swagger/">
+    <NavLink class="nav-link" target="_blank" href="/swagger/" >
       <span class="oi oi-external-link" aria-hidden="true"></span> Api Docs
     </NavLink>
   </li>
