--- a/Source/TimeWarp.Blazor.Template/templates/Feature.State/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/Feature.State/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <div data-qa="@TestId">
   <br />
-  <h1>Connection Items</h1>
+  <h1>__FeatureName__s</h1>
 
   <p>Current count: @__FeatureName__State.__FeatureName__s.Count</p>
 
@@ -31,13 +31,13 @@
               Edit
             </a>
             |
-            <a href=@Pages.Details.GetRoute(__FeatureName__.Id)>
+            @*<a href=@Pages.Details.GetRoute(__FeatureName__.Id)>
               Details
-            </a>
+            </a>*@
             |
-            <a href=@Pages.Delete.GetRoute(__FeatureName__.Id)>
+            @*<a href=@Pages.Delete.GetRoute(__FeatureName__.Id)>
               Delete
-            </a>
+            </a>*@
           </td>
         </tr>
       }
