Adding in The Freeze Team images
Sure brightens up the first appearance.

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Index.razor
@@ -7,6 +7,7 @@
 
 @inherits BaseComponent
 
+<br/>
 <h1 data-qa="HomeHeader">@ApplicationState.Name</h1>
 
 <a href="https://timewarpengineering.github.io/blazor-state/">Blazor State Documentation</a>
@@ -20,3 +21,5 @@ Welcome to your new app with Blazor-State management with an easily extensible p
 <a href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux Dev Tools Chrome Extension </a>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<img src="/images/TheFreezeTeam/SOLID_Team.png" style="width:100%"/>
