--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -29,6 +29,7 @@
   <app>@(await Html.RenderComponentAsync<App>(RenderMode.Server))</app>
 
   <script src="_content/Blazor-State/blazorstate.js"></script>
+  <script src="TimeWarpBlazor.js"></script>
   <script src="BlazorDualMode.js"></script>
   <script src="InteropTest.js"></script>
   <script>
