use tsc and ES2020 imports
Finally figured out how to get globals to work.

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -29,7 +29,7 @@
   <app>@(await Html.RenderComponentAsync<App>(RenderMode.Server))</app>
 
   <script src="_content/Blazor-State/blazorstate.js"></script>
-  <script src="TimeWarpBlazor.js"></script>
+  <script type="module" src="js/Main.js"></script>
   <script src="BlazorDualMode.js"></script>
   <script src="InteropTest.js"></script>
   <script>
