Rename to TimeWarpBlazor to its architectural name CompositionRoot
This way I don't have to change the name based on project name.  There should always be only one CompositionRoot.

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Counter/Pages/CounterPage.razor
@@ -29,7 +29,7 @@
 <br />
 <hr />
 <h6>Click below to send a IncrementCountAction via JsInterop.</h6>
-<button class="btn btn-primary" data-qa="JsInterop" onclick="window._TimeWarpBlazor_.DispatchIncrementCountAction()">Increment Count by 7 via JavaScript Interop</button>
+<button class="btn btn-primary" data-qa="JsInterop" onclick="window.CompositionRoot.Counter.DispatchIncrementCountAction()">Increment Count by 7 via JavaScript Interop</button>
 <br />
 <hr />
 <h6>EventStream is an example of middleware.  It adds each action to list.</h6>
