Add Tailwinds configuration using InterFont

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -24,6 +24,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 <body>
   <app>@(await Html.RenderComponentAsync<App>(RenderMode.Server))</app>
