Update buttons create first hero icon component

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/Button/Button.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/Button/Button.razor
@@ -2,9 +2,13 @@
 @inherits DisplayComponent
 
 <button class=@CssClass @attributes=Attributes @onclick=@OnClickHandler>
-  @if(DisplayLogo)
-  {
-
-  }
-  <span>@ChildContent</span>
+   @SvgIcon
+   @if(ButtonText == null)
+   {
+     @ChildContent
+   }
+   else
+   {
+    @ButtonText
+   }
 </button>
