--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Design/Pages/TailwindButtons.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Design/Pages/TailwindButtons.razor
@@ -4,7 +4,7 @@
 <Button>Default</Button>
 
 <Heading>Outline Button</Heading>
-<Button Variant=@Button.ButtonVariant.Outline>Outline</Button>
+<Button Variant=@Button.ButtonVariant.Outline class="mt-2">Outline</Button>
 
 <Heading>Default Button with Icon</Heading>
 <Button Variant=@Button.ButtonVariant.Default>
