--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/Stacks/HStack.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/Stacks/HStack.razor
@@ -1,4 +1,4 @@
 ﻿@namespace TimeWarp.Blazor.Components
 @inherits ParentComponent
 
-<Stack Variant=@Stack.StackVariant.Horizontal>@ChildContent</Stack>
+<Stack @attributes=Attributes Variant=@Stack.StackVariant.Horizontal>@ChildContent</Stack>
