--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/Stacks/Stack.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/Stacks/Stack.razor
@@ -1,6 +1,6 @@
 ﻿@namespace TimeWarp.Blazor.Components
 @inherits ParentComponent
 
-<div class=@CssClass @attributes=Attributes>
+<div @attributes=Attributes class=@CssClass>
   @ChildContent
 </div>
