Start On a Css Transition Component

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Design/Pages/DesignHomePage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Design/Pages/DesignHomePage.razor
@@ -14,6 +14,9 @@
   <li>
     <NavLink class="nav-link" href=@StacksPage.GetRoute()>Stacks</NavLink>
   </li>
+  <li>
+    <NavLink class="nav-link" href=@TransitionPage.GetRoute()>Transitions</NavLink>
+  </li>
 </ul>
 
 @code
