--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TailwindUI/ApplicationUI/Navigation/Navbars/Dark1/NavBarDark1.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TailwindUI/ApplicationUI/Navigation/Navbars/Dark1/NavBarDark1.razor
@@ -4,7 +4,7 @@
   <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
     <div class="relative flex items-center justify-between h-16">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-        <HamburgerButton />
+        <MobileMenuButton />
       </div>
       <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
         <Logo />
