--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TailwindUI/ApplicationUI/Navigation/Navbars/Dark1/Subs/NavigationLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TailwindUI/ApplicationUI/Navigation/Navbars/Dark1/Subs/NavigationLinks.razor
@@ -2,10 +2,9 @@
 
 <div class="hidden sm:block sm:ml-6">
   <div class="flex">
-    <NavBarLink Href="#">Home</NavBarLink>
-    <NavBarLink Href=@CounterPage.GetRoute()>Counter</NavBarLink>
-    <NavBarLink Href=@WeatherForecastsPage.GetRoute()>Weather Forecasts</NavBarLink>
-    <NavBarLink Href="https://thefreezeteam.com/" Target=NavBarLink.TargetValue._blank>The Freeze Team</NavBarLink>
-    <NavBarLink Href="https://timewarpengineering.github.io">GitHub</NavBarLink>
+    <NavBarLink Href="#">Dashboard</NavBarLink>
+    <NavBarLink Href="#">Team</NavBarLink>
+    <NavBarLink Href="#">Projects</NavBarLink>
+    <NavBarLink Href="#">Calendar</NavBarLink>
   </div>
 </div>
