We are choosing to use the Tailwind Nav Bar
in our app so we copy from the Tailwinds Folder to our Components so we can modify for our custom use.
The Tailwind folder won't ship in release mode.

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Layouts/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Layouts/_Imports.razor
@@ -1,1 +1,1 @@
-﻿@using Tailwind.ApplicationUi.Navigation.Navbars.SimpleDarkWithMenuButtonOnLeft
+﻿@using TimeWarp.Blazor.Features.Applications.Components
