Update to tailwinds based components

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/Buttons/Button.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/Buttons/Button.razor
@@ -1,7 +1,7 @@
 ﻿@namespace TimeWarp.Blazor.Components
 @inherits DisplayComponent
 
-<button @attributes=Attributes @onclick=@OnClickHandler class=@CssClass>
+<button @attributes=Attributes class=@CssClass>
   @SvgIcon
   @if (ButtonText == null)
   {
