--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Layouts/MainLayout.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Layouts/MainLayout.razor
@@ -2,8 +2,11 @@
 
 @inherits LayoutComponentBase
 
-<NavBarDark1 />
-<header></header>
-<main class="container mx-auto">
-  @Body
-</main>
+@Body
+@*<NavBarDark />
+<header>@HeaderTemplate</header>
+<main>
+  <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+    @Body
+  </div>
+</main>*@
