--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/Logo.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/Logo.razor
@@ -1,6 +1,7 @@
 ﻿@namespace TimeWarp.Blazor.Features.Applications.Components
+@inherits BaseComponent
 
 <div class="flex-shrink-0">
-  <img class="block lg:hidden h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-on-dark.svg" alt="Workflow logo">
-  <img class="hidden lg:block h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-on-dark.svg" alt="Workflow logo">
+  <img class="block lg:hidden h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Blazor logo">
+  <img class="hidden lg:block h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Blazor logo">
 </div>
