--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Authentication/ChangePasswordPage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Authentication/ChangePasswordPage.razor
@@ -1,10 +1,7 @@
 @namespace TimeWarp.Blazor.Pages
-
-@using TimeWarp.Blazor.Features.Bases
-
 @page "/changePassword"
-
 @inherits BaseComponent
 
-<h1>Change Password Page</h1>
-
+<Page>
+  <HeaderContent>Change Password Page</HeaderContent>
+</Page>
