--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Authentication/LogoutPage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Authentication/LogoutPage.razor
@@ -1,9 +1,7 @@
 @namespace TimeWarp.Blazor.Pages
-
-@using TimeWarp.Blazor.Features.Bases
-
 @page "/Logout"
-
 @inherits BaseComponent
 
-<h1>Logout Page</h1>
+<Page>
+  <HeaderContent>Logout Page</HeaderContent>
+</Page>
