--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Authentication/ProfilePage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Authentication/ProfilePage.razor
@@ -1,9 +1,8 @@
 @namespace TimeWarp.Blazor.Pages
-
-@using TimeWarp.Blazor.Features.Bases
-
 @page "/Profile"
-
 @inherits BaseComponent
 
-<h1>Profile Page</h1>
+<Page>
+  <HeaderContent>Profile Page</HeaderContent>
+</Page>
+
