--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/NavigationLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/NavigationLinks.razor
@@ -7,5 +7,6 @@
     <NavBarLink Href=@WeatherForecastsPage.GetRoute()>Weather Forecasts</NavBarLink>
     <NavBarLink Href="https://thefreezeteam.com/" Target=NavBarLink.TargetValue._blank>The Freeze Team</NavBarLink>
     <NavBarLink Href="https://timewarpengineering.github.io">GitHub</NavBarLink>
+    <NavBarLink Href="/swagger/" Target=NavBarLink.TargetValue._blank>Api Docs</NavBarLink>
   </div>
 </div>
