--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
@@ -1,22 +1,36 @@
 @namespace TimeWarp.Blazor.Pages
 
-@using TimeWarp.Blazor.Features.Bases
-@using TimeWarp.Blazor.Components
-
 @page "/"
 
 @inherits BaseComponent
 
-<Heading data-qa="HomeHeader">@ApplicationState.Name</Heading>
+<Page>
+  <HeaderContent>
+    @ApplicationState.Name
+  </HeaderContent>
 
-<a href="https://timewarpengineering.github.io/blazor-state/">Blazor State Documentation</a>
+  <MainContent>
+    <div class="px-4 py-6 sm:px-0">
+      <VStack>
+        <p>
+          Welcome to your new app with <HyperLink href="https://timewarpengineering.github.io/blazor-state/"> Blazor State</HyperLink> management and an easily extensible pipeline utilizing
+          <HyperLink href="https://github.com/jbogard/MediatR">MediatR.</HyperLink>
+        </p>
+        <p class="mt-4">
+          <HyperLink href="https://github.com/TimeWarpEngineering/blazor-state">Blazor State GitHub project</HyperLink>
+        </p>
+        
+        <HyperLink href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux Dev Tools Chrome Extension </HyperLink>
 
-Welcome to your new app with Blazor-State management with an easily extensible pipeline utilizing <a href="https://github.com/jbogard/MediatR">MediatR.</a>
+        <Alert class="mt-4" Title="Tailwinds UI">
+          This site is built with
+          <HyperLink href="https://tailwindcss.com/">Tailwind css</HyperLink>
+          and
+          <HyperLink href="https://tailwindui.com">Tailwind UI</HyperLink>
+        </Alert>
 
-<a href="https://github.com/TimeWarpEngineering/blazor-state">Blazor State GitHub project</a>
-
-<a href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux Dev Tools Chrome Extension </a>
-
-<SurveyPrompt Title="How is Blazor working for you?" />
-
-<img src="/images/TheFreezeTeam/SOLID_Team.png" style="width:100%"/>
+        <img class="w-full" src="/images/TheFreezeTeam/SOLID_Team.png" />
+      </VStack>
+    </div>
+  </MainContent>
+</Page>
