--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Counter/Pages/CounterPage.razor
@@ -7,30 +7,35 @@
 
 @inherits BaseComponent
 
-@page "/counter"
+@page "/Counter"
 
-<br />
-<h1>Counter Page</h1>
+<Page>
+  <HeaderContent>Counter Page</HeaderContent>
+  <MainContent>
+    <Heading class="text-2xl font-bold leading-tight text-gray-900">Counter Display 1</Heading>
+    <Counter TestId="Counter1" />
 
-<h2>Counter Display 1</h2>
-<Counter TestId="Counter1" />
-<br />
+    <hr class="mt-4" />
+    <Heading class="mt-4 text-2xl font-bold leading-tight text-gray-900">Counter Display 2</Heading>
+    <Counter TestId="Counter2" />
 
-<h2>Counter Display 2</h2>
-<Counter TestId="Counter2" />
-<br />
-<hr />
-<h6>Reset button will clear all state in the Store and return you to the home page</h6>
-<ResetButton />
-<br />
-<hr />
-<h6>Click below to send a Change Route Request that should take back to home page.</h6>
-<button class="btn btn-primary" data-qa="ChangeRoute" @onclick="ButtonClick">Change Route to Home</button>
-<br />
-<hr />
-<h6>Click below to send a IncrementCountAction via JsInterop.</h6>
-<button class="btn btn-primary" data-qa="JsInterop" onclick="window.CompositionRoot.Counter.DispatchIncrementCountAction()">Increment Count by 7 via JavaScript Interop</button>
-<br />
-<hr />
-<h6>EventStream is an example of middleware.  It adds each action to list.</h6>
-<EventStream />
+    <hr class="mt-4" />
+    <Text class="mt-4 block">Reset button will clear all state in the Store and return you to the home page</Text>
+    <Button id="@Id" data-qa="@TestId" @onclick=ResetButtonClick>Reset Store</Button>
+
+    <hr class="mt-4" />
+    <Text class="mt-4 block">Click below to send a Change Route Request that should take back to home page.</Text>
+    <Button Variant=Button.ButtonVariant.Default data-qa="ChangeRoute" @onclick=@ButtonClick>Change Route to Home</Button>
+
+    <hr class="mt-4" />
+    <Text class="mt-4 block">Click below to send a IncrementCountAction via JsInterop.</Text>
+    <Button class="" data-qa="JsInterop" onclick="window.CompositionRoot.Counter.DispatchIncrementCountAction()">
+      Increment Count by 7 via JavaScript Interop
+    </Button>
+
+    <hr class="mt-4" />
+    <Heading class="mt-4 text-2xl font-bold leading-tight text-gray-900">Event Stream</Heading>
+    <Alert class="mt-2">EventStream is an example of middleware.  It adds each action to a list.</Alert>
+    <EventStream />
+  </MainContent>
+</Page>
