Add the TimeWarp Process back to the public repo
Cleanup up add some icons etc.

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/App.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/App.razor
@@ -6,7 +6,7 @@
 
 <Router AppAssembly="typeof(Client.Program).Assembly">
   <Found Context="routeData">
-    <RouteView RouteData="routeData" DefaultLayout="typeof(TimeWarp.Blazor.Components.EmptyLayout)" />
+    <RouteView RouteData=@routeData DefaultLayout=@typeof(TimeWarp.Blazor.Components.EmptyLayout) />
   </Found>
   <NotFound>
     <h1>Page not found</h1>
