--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/HeroIcons/Solid/X_Icon.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Atoms/HeroIcons/Solid/X_Icon.razor
@@ -5,3 +5,7 @@
   <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd">
   </path>
 </svg>
+
+<svg viewBox="0 0 20 20" fill="currentColor">
+  <path d="M1 1L13 13M1 13L13 1L1 13Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+</svg>
