--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Counter/Pages/CounterPage.razor
@@ -35,7 +35,7 @@
 
     <hr class="mt-4" />
     <Heading class="mt-4 text-2xl font-bold leading-tight text-gray-900">Event Stream</Heading>
-    <Alert class="mt-2">EventStream is an example of middleware.  It adds each action to a list.</Alert>
+    <SimpleAlert class="mt-2">EventStream is an example of middleware.  It adds each action to a list.</SimpleAlert>
     <EventStream />
   </MainContent>
 </Page>
