Build Login Page

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
@@ -22,12 +22,12 @@
         
         <HyperLink href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux Dev Tools Chrome Extension </HyperLink>
 
-        <Alert class="mt-4" Title="Tailwinds UI">
+        <SimpleAlert class="mt-4" Title="Tailwinds UI">
           This site is built with
           <HyperLink href="https://tailwindcss.com/">Tailwind css</HyperLink>
           and
           <HyperLink href="https://tailwindui.com">Tailwind UI</HyperLink>
-        </Alert>
+        </SimpleAlert>
 
         <img class="w-full" src="/images/TheFreezeTeam/SOLID_Team.png" />
       </VStack>
