--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/AlertButton.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/AlertButton.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Features.Applications.Components
+﻿@namespace TimeWarp.Blazor.Features.Applications.Components.NavBars.Dark
 
 <button class="p-1 border-2 border-transparent text-gray-400 rounded-full hover:text-white focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out" aria-label="Notifications">
   <HeroIcons.Outline.BellIcon class="h-6 w-6" />
