--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/Logo.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/Logo.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Features.Applications.Components
+﻿@namespace TimeWarp.Blazor.Features.Applications.Components.NavBars.Dark
 @inherits BaseComponent
 
 <div class="flex-shrink-0">
