--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/MobileMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Subs/MobileMenu.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Features.Applications.Components
+﻿@namespace TimeWarp.Blazor.Features.Applications.Components.NavBars.Dark
 <!--
     Mobile menu, toggle classes based on menu state.
 
