Move to Components
Add namespaces for child components

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Layouts/Page.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Layouts/Page.razor
@@ -4,7 +4,7 @@
 <div class="min-h-screen flex flex-col font-sans">
   @if (ShowNavBar)
   {
-    <NavBarDark />
+    <DarkNavBar />
   }
 
   @if (HeaderContent != null)
