--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileDropDown.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileDropDown.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Features.Applications.Components
+﻿@namespace TimeWarp.Blazor.Features.Applications.Components.NavBars.Dark
 @inherits ComponentBase
 <!-- Profile dropdown -->
 <div class="ml-3 relative">
