--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/DarkNavBar.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/DarkNavBar.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Features.Applications.Components
+﻿@namespace TimeWarp.Blazor.Features.Applications.Components.NavBars.Dark
 
 <nav class="bg-gray-800">
   <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
