--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
@@ -22,7 +22,7 @@
         
         <HyperLink href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux Dev Tools Chrome Extension </HyperLink>
 
-        <SimpleAlert class="mt-4" Title="Tailwinds UI">
+        <SimpleAlert class="mt-4" Title="Tailwind UI">
           This site is built with
           <HyperLink href="https://tailwindcss.com/">Tailwind css</HyperLink>
           and
