Finish Upsert - Fetch - Delete.

--- a/Source/TimeWarp.Blazor.Template/templates/Feature.AutoCrud/GeneratedCode/Source/Client/Pages/Create__FeatureName__.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/Feature.AutoCrud/GeneratedCode/Source/Client/Pages/Create__FeatureName__.razor
@@ -1,6 +1,6 @@
-@namespace __RootspaceName__.Pages
-@using __RootspaceName__.Features.Bases
-@using __RootspaceName__.Components
+@namespace __RootNamespace__.Pages
+@using __RootNamespace__.Features.Bases
+@using __RootNamespace__.Components
 
 @inherits BaseComponent
 
