--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/App.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/App.razor
@@ -4,7 +4,7 @@
 
 @inherits ComponentBase
 
-<Router AppAssembly="typeof(Client.Program).Assembly">
+<Router AppAssembly="typeof(Client.Program).Assembly"  PreferExactMatches=@true>
   <Found Context="routeData">
     <RouteView RouteData=@routeData DefaultLayout=@typeof(TimeWarp.Blazor.Components.EmptyLayout) />
   </Found>
