Update link to the new css format
https://docs.microsoft.com/en-us/aspnet/core/migration/31-to-50?view=aspnetcore-5.0&tabs=visual-studio#update-blazor-webassembly-and-blazor-server-projects Part 1

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
   <!-- Compiled Tailwind CSS -->
-  <link href="css/site.css" rel="stylesheet" />
+  <link href="TimeWarp.Blazor.Client.styles.css" rel="stylesheet" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
