--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/_Imports.razor
@@ -1,6 +1,7 @@
 @using BlazorComponentUtilities
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using System.Net.Http.Json
 @using TimeWarp.Blazor.Components
 @using TimeWarp.Blazor.Features.Bases
