--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -23,8 +23,8 @@
   <link rel="manifest" href="manifest.json" />
 </head>
 <body class="antialiased font-sans">
-  <app>@(await Html.RenderComponentAsync<App>(RenderMode.Server))</app>
-
+  <div id="app">@(await Html.RenderComponentAsync<App>(RenderMode.Server))</div>
+  
   <script src="_content/Blazor-State/blazorstate.js"></script>
   <script type="module" src="js/Main.js"></script>
 </body>
