Add forms to the global imports

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/_Imports.razor
@@ -1,4 +1,5 @@
 @using BlazorComponentUtilities
+@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
@@ -6,4 +7,3 @@
 @using TimeWarp.Blazor.Components
 @using TimeWarp.Blazor.Features.Bases
 @using TimeWarp.Blazor.Pages
-
