Add the UI part
The client fails with 'Could not resolve type with token 0100001c from typeref (expected class 'System.ServiceModel.ServiceContractAttribute' in assembly 'System.ServiceModel.Primitives, Version=4.5.0.3, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a')

But if can get that to work then this should be ok

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
@@ -30,6 +30,17 @@
         </SimpleAlert>
 
         <img class="w-full" src="/images/TheFreezeTeam/SOLID_Team.png" />
+        <div>
+          <EditForm Model=@HelloRequest OnValidSubmit=@Submit>
+            <InputText @bind-Value=HelloRequest.Name />
+            <input type="submit" value="Submit" />  
+          </EditForm>
+          @if (HelloResponse != null)
+          {
+            @HelloResponse.Message
+            <br />
+          }
+        </div>
       </VStack>
     </div>
   </MainContent>
