--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Components/NavigationLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Components/NavigationLinks.razor
@@ -5,6 +5,7 @@
     <NavBarLink Href="#">Home</NavBarLink>
     <NavBarLink Href=@CounterPage.GetRoute()>Counter</NavBarLink>
     <NavBarLink Href=@WeatherForecastsPage.GetRoute()>Weather Forecasts</NavBarLink>
+    <NavBarLink Href=@WeatherForecastsGrpcPage.GetRoute()>Weather Forecasts Grpc</NavBarLink>
     <NavBarLink Href="https://thefreezeteam.com/" Target=NavBarLink.TargetValue._blank>The Freeze Team</NavBarLink>
     <NavBarLink Href="https://timewarpengineering.github.io">GitHub</NavBarLink>
     <NavBarLink Href="/swagger/" Target=NavBarLink.TargetValue._blank>Api Docs</NavBarLink>
