@onclick=@xxx the second @ isn't needed as the first one already puts us in C# mode

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TailwindUI/ApplicationUI/Navigation/Navbars/Dark1/Subs/ProfileDropDown/ProfileDropDown.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TailwindUI/ApplicationUI/Navigation/Navbars/Dark1/Subs/ProfileDropDown/ProfileDropDown.razor
@@ -4,7 +4,7 @@
   <!-- Profile dropdown -->
 <div class="ml-3 relative">
   <div>
-    <ProfileButton @onclick=@OnClickHandler />
+    <ProfileButton @onclick=OnClickHandler />
   </div>
   <!--
     TODO:
