--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileDropDown.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileDropDown.razor
@@ -3,7 +3,7 @@
 <!-- Profile dropdown -->
 <div class="ml-3 relative">
   <div>
-    <ProfileButton @onclick=@OnClickHandler />
+    <ProfileButton @onclick=OnClickHandler />
   </div>
   <!--
     TODO:
