--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Counter/Pages/CounterPage.razor
@@ -25,7 +25,7 @@
 
     <hr class="mt-4" />
     <Text class="mt-4 block">Click below to send a Change Route Request that should take back to home page.</Text>
-    <Button Variant=Button.ButtonVariant.Default data-qa="ChangeRoute" @onclick=@ButtonClick>Change Route to Home</Button>
+    <Button Variant=Button.ButtonVariant.Default data-qa="ChangeRoute" @onclick=ButtonClick>Change Route to Home</Button>
 
     <hr class="mt-4" />
     <Text class="mt-4 block">Click below to send a IncrementCountAction via JsInterop.</Text>
