All Server tests are passing.  But there are no tests for GRPC service

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Authentication/ProfilePage.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Pages/Authentication/ProfilePage.razor
@@ -2,7 +2,10 @@
 @page "/Profile"
 @inherits BaseComponent
 
-<Page>
+@*<Page>
   <HeaderContent>Profile Page</HeaderContent>
-</Page>
+  <EditForm Model>
+
+  </EditForm>
+</Page>*@
 
