--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Layouts/Page/Page.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Components/Layouts/Page/Page.razor
@@ -34,11 +34,16 @@
   </main>
   @if (ShowFooter)
   {
-    <footer class="bg-white">
-      <div class="max-w-screen-xl mx-auto py-4 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
-        <BlazorLocation TestId="BlazorLocation" />
-        <span>Version:@Version</span>
-      </div>
-    </footer>
+      @if (SiteFooterContent != null)
+      {
+        <SiteFooter>
+          <SiteFooterContent>
+            @SiteFooterContent
+          </SiteFooterContent>
+        </SiteFooter>
+      } else
+      {
+        <SiteFooter/>
+      }
   }
 </div>
