--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Pages/Index.razor
@@ -30,6 +30,7 @@
         </SimpleAlert>
 
         <img class="w-full" src="/images/TheFreezeTeam/SOLID_Team.png" />
+        <Button Variant=Button.ButtonVariant.Default data-qa="FiveSecondButton" @onclick=ButtonClick>Launch Five Second Task</Button>
       </VStack>
     </div>
   </MainContent>
