--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Components/Logo.razor
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar/Components/Logo.razor
@@ -2,6 +2,6 @@
 @inherits BaseComponent
 
 <div class="flex-shrink-0">
-  <img class="block lg:hidden h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Blazor logo">
-  <img class="hidden lg:block h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Blazor logo">
+  <img class="block lg:hidden h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Architecture logo">
+  <img class="hidden lg:block h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Architecture logo">
 </div>
