--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -8,7 +8,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TimeWarp.Blazor</title>
+  <title>TimeWarp.Architecture</title>
   <base href="~/" />
 
   <!-- add inter font -->
