--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/App.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/App.razor
@@ -4,7 +4,7 @@
 
 @inherits ComponentBase
 
-<Router AppAssembly="typeof(Client.Program).Assembly"  PreferExactMatches=@true>
+<Router AppAssembly="typeof(Web.Spa.Program).Assembly"  PreferExactMatches=@true>
   <Found Context="routeData">
     <RouteView RouteData=@routeData DefaultLayout=@typeof(TimeWarp.Architecture.Components.EmptyLayout) />
   </Found>
