Simplify the TypeScript project
Use the lib.module.js Javascript Initialzier capability added in dotnet 6
have prettier ignore tsconfig Stop screwing with the comments
Switch to ESNext ... why not use the features of the latest typescript.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -29,7 +29,7 @@
 
     <hr class="mt-4" />
     <Text class="mt-4 block">Click below to send a IncrementCountAction via JsInterop.</Text>
-    <Button class="" data-qa="JsInterop" onclick="window.CompositionRoot.Counter.DispatchIncrementCountAction()">
+    <Button class="" data-qa="JsInterop" onclick="window.DispatchIncrementCountAction()">
       Increment Count by 7 via JavaScript Interop
     </Button>
 
