--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Pages/_Host.cshtml
@@ -22,8 +22,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="manifest.json" />
 </head>
-<body class="antialiased font-sans">
-  <div id="app">@(await Html.RenderComponentAsync<App>(RenderMode.Server))</div>  
-  <script type="module" src="js/Main.js"></script>
+<body class="font-sans antialiased">
+  <div id="app">@(await Html.RenderComponentAsync<App>(RenderMode.Server))</div>
+  <script src="js/BlazorDualMode.js"></script>
 </body>
 </html>
