--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Atoms/HeroIcons/Solid/CheckCircle.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Atoms/HeroIcons/Solid/CheckCircle.razor
@@ -1,4 +1,4 @@
-﻿@namespace Trinsic.Studio.Components
+﻿@namespace HeroIcons.Solid
 @inherits BaseSvg
 
 <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" @attributes=Attributes>
