Do one page with Route Attribute instead of @page
This allows us to eliminate string literals and reuse

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Design/Pages/ButtonsPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Design/Pages/ButtonsPage.razor
@@ -1,5 +1,5 @@
 ﻿@namespace TimeWarp.Architecture.Design
-@page "/Design/Buttons"
+@attribute [Route(RouteTemplate)]
   <VStack class="m-4 justify-center items-center">
     <Heading>Default Button</Heading>
     <Button>Default</Button>
