Add YARP route for web-server swagger
And add links to both web-server and api-server to the nav menu.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/NavigationLinks.razor
@@ -8,6 +8,7 @@
     <NavBarLink Href=@SuperheroPage.GetRoute()>Superhero</NavBarLink>
     <NavBarLink Href="https://thefreezeteam.com/" Target=NavBarLink.TargetValue._blank>The Freeze Team</NavBarLink>
     <NavBarLink Href="https://timewarpengineering.github.io">GitHub</NavBarLink>
-    <NavBarLink Href="/swagger/" Target=NavBarLink.TargetValue._blank>Api Docs</NavBarLink>
+    <NavBarLink Href="/api/web-server/swagger/" Target=NavBarLink.TargetValue._blank>Web-Server Docs</NavBarLink>
+    <NavBarLink Href="/api/api-server/swagger/" Target=NavBarLink.TargetValue._blank>Api-Server Docs</NavBarLink>
   </div>
 </div>
