Update tailwind to 3.0

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Design/Pages/TransitionPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Design/Pages/TransitionPage.razor
@@ -47,10 +47,10 @@
 
   private string EnterClasses = "transition ease-out duration-100";
   // private string EnterFromClasses = "transition ease-out duration-100";
-  //private string EnterToClasses = "transform opacity-100 scale-100";
+  //private string EnterToClasses = "opacity-100 scale-100";
   //private string LeaveClasses = "transition ease-in duration-75";
-  //private string LeaveFromClasses = "transform opacity-100 scale-100";
-  //private string LeaveToClasses = "transform opacity-0 scale-95";
+  //private string LeaveFromClasses = "opacity-100 scale-100";
+  //private string LeaveToClasses = "opacity-0 scale-95";
 
 
   private TransitionState State { get; set; } = TransitionState.Closed;
