--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Layouts/Page/Page.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Layouts/Page/Page.razor
@@ -1,7 +1,7 @@
 ﻿@namespace TimeWarp.Architecture.Components
 @inherits BaseComponent
 
-<div class="min-h-screen flex flex-col font-sans">
+<div class="flex flex-col min-h-screen font-sans">
   @if (ShowNavBar)
   {
     <DarkNavBar />
@@ -10,7 +10,7 @@
   @if (HeaderContent != null)
   {
     <header class="bg-white shadow" data-qa="HomeHeader">
-      <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+      <div class="px-4 py-6 mx-auto max-w-7xl sm:px-6 lg:px-8">
         <h1 class="text-3xl font-bold leading-tight text-gray-900">
           @HeaderContent
         </h1>
@@ -18,15 +18,15 @@
     </header>
   }
 
-  <main class="flex-grow">
-    <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+  <main class="grow">
+    <div class="py-6 mx-auto max-w-7xl sm:px-6 lg:px-8">
       @if (@MainContent != null)
       {
         @MainContent
       }
       else
       {
-        <div class="border-4 border-dashed border-gray-200 rounded-lg h-full">
+        <div class="h-full border-4 border-gray-200 border-dashed rounded-lg">
           Add Your Content here.
         </div>
       }
