--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/TailwindUI/ApplicationUI/Navigation/Navbars/Dark1/Subs/ProfileDropDown/ProfileDropDown.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/TailwindUI/ApplicationUI/Navigation/Navbars/Dark1/Subs/ProfileDropDown/ProfileDropDown.razor
@@ -2,7 +2,7 @@
 @inherits ComponentBase
 
   <!-- Profile dropdown -->
-<div class="ml-3 relative">
+<div class="relative ml-3">
   <div>
     <ProfileButton @onclick=OnClickHandler />
   </div>
@@ -11,11 +11,11 @@
     Profile dropdown panel, show/hide based on dropdown state.
 
     Entering: "transition ease-out duration-100"
-      From: "transform opacity-0 scale-95"
-      To: "transform opacity-100 scale-100"
+      From: "opacity-0 scale-95"
+      To: "opacity-100 scale-100"
     Leaving: "transition ease-in duration-75"
-      From: "transform opacity-100 scale-100"
-      To: "transform opacity-0 scale-95"
+      From: "opacity-100 scale-100"
+      To: "opacity-0 scale-95"
   -->
   <div class=@CssBuilder>
     <ProfileMenuPanel />
