Use Attribute instead of @page so we can use static values

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -7,7 +7,9 @@
 
 @inherits BaseComponent
 
-@page "/Counter"
+@attribute [Route(CounterPage.RouteTemplate)]
+
+<PageTitle>Counter Page</PageTitle>
 
 <Page>
   <HeaderContent>Counter Page</HeaderContent>
