--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using TimeWarp.Architecture.Features.Bases
+﻿@using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Components
 
 @layout MainLayout
