--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/BlazorLocation.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/BlazorLocation.razor
@@ -1,6 +1,6 @@
 @namespace TimeWarp.Architecture.Components
 
-@using TimeWarp.Architecture.Features.Bases
+@using TimeWarp.Architecture.Features
 
 @inherits BaseComponent
 
