--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -1,6 +1,6 @@
 @namespace TimeWarp.Architecture.Pages
 
-@using TimeWarp.Architecture.Features.Bases
+@using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Components
 @using TimeWarp.Architecture.Features.Counters.Components
 @using TimeWarp.Architecture.Features.EventStreams
