--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using System.Net.Http.Json
 @using TimeWarp.Architecture.Components
-@using TimeWarp.Architecture.Features.Bases
+@using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Pages
