replace hero icons with timewarp-heroicons nuget

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Design/Pages/IconsPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Design/Pages/IconsPage.razor
@@ -11,14 +11,14 @@
         <LockClosedIcon class="h-8 w-8 text-primary-500" />
       </VStack>
       <VStack class="m-2 items-center">
-        <Text>@nameof(MenuIcon)</Text>
-        <MenuIcon class="h-12 w-12" />
-        <MenuIcon class="h-8 w-8 text-primary-500" />
+        <Text>@nameof(Bars3Icon)</Text>
+        <Bars3Icon class="h-12 w-12" />
+        <Bars3Icon class="h-8 w-8 text-primary-500" />
       </VStack>
       <VStack class="m-2 items-center">
-        <Text>@nameof(X_Icon)</Text>
-        <X_Icon class="h-12 w-12" />
-        <X_Icon class="h-8 w-8 text-primary-500" />
+        <Text>@nameof(XMarkIcon)</Text>
+        <XMarkIcon class="h-12 w-12" />
+        <XMarkIcon class="h-8 w-8 text-primary-500" />
       </VStack>
     </HStack>
   </VStack>
@@ -28,8 +28,8 @@
     <HStack class="flex-wrap ">
       <VStack class="m-2 items-center">
         <Text>@nameof(BellIcon)</Text>
-        <HeroIcons.Outline.BellIcon class="h-12 w-12" />
-        <HeroIcons.Outline.BellIcon class="h-8 w-8 text-primary-500" />
+        <TimeWarp.HeroIcons.Outline.BellIcon class="h-12 w-12" />
+        <TimeWarp.HeroIcons.Outline.BellIcon class="h-8 w-8 text-primary-500" />
       </VStack>
     </HStack>
   </VStack>
