--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Design/Pages/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Design/Pages/_Imports.razor
@@ -1,6 +1,5 @@
 ﻿@layout EmptyLayout
 
-@using HeroIcons.Outline
-@using HeroIcons.Solid
+@using TimeWarp.HeroIcons.Solid
 @using Tailwind
 @using TimeWarp.Architecture.Design.Components
