clean up place holder profile page

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/ProfilePage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/Authentication/ProfilePage.razor
@@ -2,10 +2,6 @@
 @page "/Profile"
 @inherits BaseComponent
 
-@*<Page>
+<Page>
   <HeaderContent>Profile Page</HeaderContent>
-  <EditForm Model>
-
-  </EditForm>
-</Page>*@
-
+</Page>
