--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -14,11 +14,11 @@
 <Page>
   <HeaderContent>Counter Page</HeaderContent>
   <MainContent>
-    <Heading class="text-2xl font-bold leading-tight text-gray-900">Counter Display 1</Heading>
+    <h1 class="text-2xl font-bold leading-tight text-gray-900">Counter Display 1</h1>
     <Counter TestId="Counter1" />
 
     <hr class="mt-4" />
-    <Heading class="mt-4 text-2xl font-bold leading-tight text-gray-900">Counter Display 2</Heading>
+    <h1 class="mt-4 text-2xl font-bold leading-tight text-gray-900">Counter Display 2</h1>
     <Counter TestId="Counter2" />
 
     <hr class="mt-4" />
@@ -36,7 +36,7 @@
     </Button>
 
     <hr class="mt-4" />
-    <Heading class="mt-4 text-2xl font-bold leading-tight text-gray-900">Event Stream</Heading>
+    <h1 class="mt-4 text-2xl font-bold leading-tight text-gray-900">Event Stream</h1>
     <SimpleAlert class="mt-2">EventStream is an example of middleware.  It adds each action to a list.</SimpleAlert>
     <EventStream />
   </MainContent>
