remove more and reorg

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Superhero/Pages/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Superhero/Pages/_Imports.razor
@@ -1,2 +1,3 @@
-﻿@layout MainLayout
-@using TimeWarp.Architecture.Features.WeatherForecasts.Components
+﻿@using TimeWarp.Architecture.Features.WeatherForecasts.Components
+
+@layout MainLayout
