--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/App.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/App.razor
@@ -4,7 +4,7 @@
 
 <Router AppAssembly="typeof(Web.Spa.Program).Assembly"  PreferExactMatches=@true>
   <Found Context="routeData">
-    <RouteView RouteData=@routeData DefaultLayout=@typeof(TimeWarp.Architecture.Components.EmptyLayout) />
+    <RouteView RouteData=@routeData DefaultLayout=@typeof(MainLayout) />
   </Found>
   <NotFound>
     <PageTitle>Not Found</PageTitle>
